# manzanita

./: Cargo.toml  LICENSE  README.md  comparison.py  comprehensive_test.py  example.py  interval_tree_readme.md  manzanita.pyi  manzanita_wrapper.py  pyproject.toml  test.py  test_boundaries.py  test_boundary_fixes.py
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py
src/: interval.rs  lib.rs  node.rs  tree.rs
test/: intervals.py  intervaltrees.py  match.py
test/data/: issue25_orig.py  issue41_orig.py
test/interval_methods/: binary_test.py  sorting_test.py  unary_test.py
test/intervaltree_methods/: copy_test.py  debug_test.py  delete_test.py  init_test.py  insert_test.py  query_test.py  restructure_test.py  setlike_test.py
test/issues/: issue25_test.py  issue26_test.py  issue27_test.py  issue4.py  issue41_test.py  issue67_test.py  issue72_test.py
test/optimality/: optimality_test_matrix.py
tests/: __init__.py  test_basic.py  test_new_methods.py  test_utils.py
tests/intervaltree_compat/: __init__.py  conftest.py
tests/intervaltree_compat/data/: __init__.py  ivs0.py  ivs1.py  ivs1_float_copy_structure.py  ivs2.py  ivs3.py
tests/intervaltree_compat/interval_methods/: test_binary.py  test_sorting.py  test_str.py  test_unary.py
tests/intervaltree_compat/intervaltree_methods/: test_copy.py  test_debug.py  test_delete.py  test_init.py  test_insert.py  test_query.py  test_restructure.py  test_setlike.py
tests/intervaltree_compat/issues/: test_issue25.py  test_issue26.py  test_issue27.py  test_issue41.py  test_issue67.py  test_issue72.py
